--- a/app/templates/usermanagement.html
+++ b/app/templates/usermanagement.html
@@ -7,7 +7,7 @@
 {% block content %}
 <div class="text-center p-8 rounded-lg mx-auto shadow-md max-w-2xl my-20 bg-white">
   <h1 class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2">
-    <i class="fa-solid fa-users text-green-500"></i>
+    <i class="fa-solid fa-user text-green-500"></i>
     {{ _('User Management Section') }}
   </h1>
   <p class="text-gray-600 mb-6">{{ _('This feature is coming soon. We\'re working hard to bring you an improved user management experience.') }}</p>
