--- a/app/templates/finance.html
+++ b/app/templates/finance.html
@@ -8,7 +8,7 @@ content %}
   <h1
     class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2"
   >
-    <i class="fa-solid fa-cog text-green-500"></i>
+    <i class="fa-solid fa-sack-dollar text-green-500"></i>
     {{ _('Finance Section') }}
   </h1>
   <p class="text-gray-600 mb-6">
