--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" >
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,24 +15,41 @@
     {% block styles %}{% endblock %}
   </head>
 
-  <body class="min-h-screen flex ">
-
-    <div>
-      {% include 'sidebar.html' %}
+  <body class="min-h-screen flex">
+    <div>{% include 'sidebar.html' %}
+          {% include 'mobileSidebar.html' %}
     </div>
-    
+
     <div class="flex-1 flex flex-col p-4">
       {% include 'topbar.html' %}
 
-      <main>
-        {% block content %}{% endblock %}
-      </main>
+      <main>{% block content %}{% endblock %}</main>
     </div>
 
-   
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-     {% block scripts %}
-  <!-- Child scripts go here -->
-  {% endblock %}
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.min.js"
+    ></script>
+
+    <script>
+  window.translations = {
+    // General translations
+    "Jan": "{{ _('Jan') }}",
+    "Feb": "{{ _('Feb') }}",
+    "Mar": "{{ _('Mar') }}",
+    "Apr": "{{ _('Apr') }}",
+    "May": "{{ _('May') }}",
+    "Jun": "{{ _('Jun') }}",
+    "Income": "{{ _('Income') }}",
+    "Expenses": "{{ _('Expenses') }}",
+    "Profit": "{{ _('Profit') }}",
+  };
+  
+  function __(key) {
+    return window.translations[key] || key;
+  }
+</script>
+
+    {% block scripts %} {% endblock %}
   </body>
 </html>
