--- a/app/templates/sidebar.html
+++ b/app/templates/sidebar.html
@@ -1,7 +1,7 @@
 <!-- Sidebar HTML -->
 
 <div
-  class="min-h-screen py-6 px-0 md:w-72 w-52 h-full justify-between overflow-y-auto items-center l-0 t-0 shadow-lg hidden lg:flex lg:flex-col bg-white"
+  class="min-h-screen py-6 px-0 md:w-72 w-52 h-full justify-between overflow-y-auto items-center l-0 t-0 shadow-lg hidden xl:flex lg:flex-col bg-white"
 >
   <div>
     <div class="flex gap-2 border-b-gray-500 border-b-2 justify-center">
