--- a/app/templates/subplan.html
+++ b/app/templates/subplan.html
@@ -8,7 +8,7 @@ block content %}
   <h1
     class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2"
   >
-    <i class="fa-solid fa-chart-simple text-red-400"></i>
+    <i class="fa-solid fa-money-bill-transfer text-orange-300"></i>
     {{ _('Subscription Plan') }}
   </h1>
   <p class="text-gray-600 mb-6">
