--- a/app/templates/mobilesidebar.html
+++ b/app/templates/mobilesidebar.html
@@ -1,4 +1,4 @@
-<!-- Mobile sidebar (add this) -->
+<!-- Mobile sidebar -->
 <div
   id="mobileSidebar"
   class="fixed inset-0 blur-2xl  z-50 hidden xl:hidden"
