--- a/app/templates/payroll.html
+++ b/app/templates/payroll.html
@@ -8,7 +8,7 @@ content %}
   <h1
     class="text-3xl font-bold text-gray-800 mb-4 flex justify-center items-center gap-2"
   >
-    <i class="fa-solid fa-chart-simple text-red-400"></i>
+    <i class="fa-solid fa-money-bill text-green-500"></i>
     {{ _('Payroll') }}
   </h1>
   <p class="text-gray-600 mb-6">
