--- a/app/templates/mobilesidebar.html
+++ b/app/templates/mobilesidebar.html
@@ -1,7 +1,7 @@
 <!-- Mobile sidebar -->
 <div
   id="mobileSidebar"
-  class="fixed inset-0 blur-2xl  z-50 hidden xl:hidden"
+  class="fixed inset-0   z-50 hidden xl:hidden"
 >
   <div class="bg-white h-full w-64 p-4 overflow-y-auto">
     <div class="flex justify-between items-center mb-6">
