--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -43,6 +43,11 @@
     "Income": "{{ _('Income') }}",
     "Expenses": "{{ _('Expenses') }}",
     "Profit": "{{ _('Profit') }}",
+    "Mondat": "{{ _('Monday') }}",
+    "Tuesday": "{{ _('Tuesday') }}",
+    "Wednesday": "{{ _('Wednesday') }}",
+    "Thursday": "{{ _('Thursday') }}",
+    "Friday": "{{ _('Friday') }}",
   };
   
   function __(key) {
