--- a/app/templates/useractivity.html
+++ b/app/templates/useractivity.html
@@ -301,5 +301,5 @@ block content %}
   </div>
 </div>
 
-<script src="../static/js/usermanagement.js"></script>
+<script src="../static/js/useractivity.js"></script>
 {% endblock %}
