--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -50,6 +50,11 @@
       }
     </script>
 
+    <script src="../static/js/dashboard.js"></script>
+    <script src="../static/js/chart.js"></script>
+    <script src="../static/js/projects.js"></script>
+    <script src="../static/js/snapshot.js"></script>
+
     {% block scripts %} {% endblock %}
   </body>
 </html>
