Updated reporting.html , and added charts

--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -54,6 +54,9 @@
     <script src="../static/js/chart.js"></script>
     <script src="../static/js/projects.js"></script>
     <script src="../static/js/snapshot.js"></script>
+    <script src="../static/js/useractivity.js"></script>
+    <script src="../static/js/attendance_chart.js"></script>
+    <script src="../static/js/activity_chart.js"></script>
 
     {% block scripts %} {% endblock %}
   </body>
