--- a/app/templates/reporting.html
+++ b/app/templates/reporting.html
@@ -62,7 +62,7 @@ content %}
 
 
 
-<!-- User Statistics - Simple Version -->
+<!-- User Statistics  -->
 <div class="grid grid-cols-2 sm:grid-cols-4 gap-4 mt-6">
   <div class="bg-white rounded-lg shadow-md p-4">
     <div class="flex items-center justify-between mb-2">
