--- a/app/templates/layout.html
+++ b/app/templates/layout.html
@@ -43,6 +43,10 @@
         Wednesday: "{{ _('Wednesday') }}",
         Thursday: "{{ _('Thursday') }}",
         Friday: "{{ _('Friday') }}",
+        Saturday: "{{ _('Saturday') }}",
+        Sunday: "{{ _('Sunday') }}",
+        Attendance: "{{ _('Attendance') }}",
+        Users:"{{ _('Users') }}",
       };
 
       function __(key) {
