--- a/app/templates/reporting.html
+++ b/app/templates/reporting.html
@@ -38,8 +38,8 @@ content %}
       <i class="fa-solid fa-chart-line text-indigo-500 text-2xl"></i>
     </div>
 
-    <div class="bg-gray-50 p-2 rounded-lg">
-      <canvas id="attendanceChart" height="100"></canvas>
+    <div class="bg-gray-50 h-72 p-2 rounded-lg">
+      <canvas id="attendanceChart" ></canvas>
     </div>
   </div>
 </div>
